2012-11-21  David Holsgrove  <david.holsgrove@xilinx.com>

	* gas/microblaze/allinsn.s: Test use of SHR, SLR
	* gas/microblaze/allinsn.d: Likewise

2012-11-20  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* gas/s390/zarch-z9-109.d: Fix srstu opcode.
	* gas/s390/zarch-z900.d: Replace lasp with strag.

2012-11-20  Roland McGrath  <mcgrathr@google.com>

	* gas/arm/macro-pld.s: New file.
	* gas/arm/macro-pld.d: New file.

2012-11-14  David Holsgrove  <david.holsgrove@xilinx.com>

	* gas/microblaze/allinsn.s: Add mbar and sleep
	* gas/microblaze/allinsn.d: Likewise

2012-11-14  David Holsgrove  <david.holsgrove@xilinx.com>

	* gas/microblaze/allinsn.s: Add clz insn
	* gas/microblaze/allinsn.d: Likewise

2012-11-14  David Holsgrove  <david.holsgrove@xilinx.com>

	* gas/microblaze/allinsn.exp: New file - test newly added opcodes
	* gas/microblaze/allinsn.s: Likewise
	* gas/microblaze/allinsn.d: Likewise

2012-11-14  Ulrich Weigand  <uweigand@de.ibm.com>

	* gas/ppc/astest.d: Update for fixup changes.
	* gas/ppc/astest64.d: Likewise.
	* gas/ppc/astest2.d: Likewise.
	* gas/ppc/astest2_64.d: Likewise.
	* gas/ppc/test1elf32.d: Likewise.
	* gas/ppc/test1elf64.d: Likewise.

2012-11-09  David Holsgrove  <david.holsgrove@xilinx.com>

	* gas/microblaze/endian.exp: New file - endian testcase for microblaze / microblazeel.
	* gas/microblaze/endian.s: Likewise.
	* gas/microblaze/endian_be.d: Likewise.
	* gas/microblaze/endian_le.d: Likewise.
	* gas/microblaze/endian_le_elf.d: Likewise.
	* gas/microblaze/reloc_sym.d: Update to accept targets other than elf32-microblaze.
	* gas/microblaze/special_reg.d: Likewise.

2012-11-08  Maciej W. Rozycki  <macro@codesourcery.com>

	* gas/mips/lui.d: New test.
	* gas/mips/micromips@lui.d: New test.
	* gas/mips/lui-1.l: New list test.
	* gas/mips/lui-2.l: New list test.
	* gas/mips/lui.s: New test source.
	* gas/mips/lui-1.s: New test source.
	* gas/mips/lui-2.s: New test source.
	* gas/mips/mips.exp: Run the new tests.
