@@ -41,3 +41,9 @@ Disassembly of section .text:
   30:	b0000000 	imm	0
   34:	31600000 	addik	r11, r0, 0
   38:	940bc802 	mts	rshr, r11
+
+0000003c <swapb>:
+  3c:	900001e0 	swapb	r0, r0
+
+00000040 <swaph>:
+  40:	900001e2 	swaph	r0, r0
