@@ -1,3 +1,8 @@
+2012-11-21  David Holsgrove  <david.holsgrove@xilinx.com>
+
+	* microblaze-opc.h (op_code_struct): Add swapb, swaph Increase MAX_OPCODES.
+	* microblaze-opcm.h (microblaze_instr): Likewise
+
 2012-11-21  Edgar E. Iglesias <edgar.iglesias@gmail.com>
 
 	* microblaze-opcm.h: Add REG_SLR_MASK, REG_SHR_MASK, REG_SHR and REG_SLR
